My personal project

--- a/site/index.html
+++ b/site/index.html
@@ -5,10 +5,19 @@
    <title>LiveX</title>
 </head>
 <body>
-<h1>LiveX: Your personal placement guide</h1>
-<h2>Who are we?</h2>
+<h1>Mani Vig  MV</h1>
+<p>list of my friends</p>
 <ul>
-   <li>We are a bunch of enthusiast that understand the importance of placement preparation. But dont worry!! We are here to help you with every nit and grit of your preparation. With previous year placement statistics</li>   
+   <li>Harsh </li>   
+   <li>Sparsh </li>
 </ul>
+<p>My brothers</p>
+<ul>
+   <li>Akshit vig </li>   
+   <li>Dhruv vig </li>
+</ul>
+<a href="https://www.facebook.com/profile.php?id=100005018089309&ref=br_rs">My facebook link</a>
+<p>My image</p>
+<img src="https://scontent.fagr1-1.fna.fbcdn.net/v/t1.0-9/32608977_945138928996701_7436464242112331776_o.jpg?_nc_cat=0&oh=a6bd96f5f9d0590d5d42ec0a9f0c9317&oe=5BB141E1" width="400" height="400" target="_blank">
 </body>
 </html>
