--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,6 @@
 </ul>
 <a href="https://www.facebook.com/profile.php?id=100005018089309&ref=br_rs">My facebook link</a>
 <p>My image</p>
-<img src="https://scontent.fagr1-1.fna.fbcdn.net/v/t1.0-9/32608977_945138928996701_7436464242112331776_o.jpg?_nc_cat=0&oh=a6bd96f5f9d0590d5d42ec0a9f0c9317&oe=5BB141E1" width="400" height="400" target="_blank">
+<img src="https://www.google.co.in/search?q=donkey+image&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjEhISGqMfbAhWXbX0KHY9kBuEQ_AUICigB#" width="400" height="400" target="_blank">
 </body>
 </html>
