My personal project

--- a/site/personal project.html
+++ b/site/personal project.html
@@ -1,40 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-   <meta charset="utf-8">
-   <title>LiveX</title>
-   <style>
-   h1{
-   	text-align: center;
-   }
-
-   </style>
+    <meta charset="utf-8">
 </head>
 <body>
-<h1>LiveX: Your personal placement guide</h1>
-<img src="https://5.imimg.com/data5/EY/UU/GLADMIN-52724657/campus-placement-services-500x500.png" width="550" height="170" >
-<h2>Who are we?</h2>
-<p>
-   We are a bunch of enthusiast that understand the importance of placement preparation. We understand your stress of campus placements as we have been through the same phase. But dont worry!! We are here to help you with every nit and grit of your preparation. LiveX provides you an opportunity to experience the situaton and atmosphere of placement tests, group discussions, personal interviews and what not. Look where you stand among your peers and then stand out loud. Don't just settle for less. Let us be a part of your journey in achieving your dream placement because your goals are now ours.
-</p>
-<h2>Features of LiveX</h2>
-<ul>
-   <li>Company wise placement records</li>
-   <li>See what alumunus of your college say about their company</li>
-   <li>Company wise test portal based on previous year questions</li>
-   <li>A collective aptitude test of all branches of college to look where you stand</li>
-   <ul>
-       <li>Psychometric test</li>
-       <li>Dynamic aptitude test</li>
-       <li>Integrated aptitude, technical and coding round</li>
-   </ul>
-</ul>   
-<h2>Select your college</h2>
-<ul>
-  <ol>
-  <li><a href="VIT.html" target="_blank"> VIT University </a></li>
-  <li><a href="JSS.html" target="_blank"> JSS college </a></li>
-  </ol>
-</ul>
+<h1>Rakshit vig</h1>
+<p>Adress:</p>
 </body>
-</html>     
+</html>
