My personal project

--- a/module-3/personal.html
+++ b/module-3/personal.html
@@ -6,9 +6,166 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rakshit Vig</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="personalstyles.css">
+    <link rel="stylesheet" href="css/personalstyles.css">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    body {
+    <style>
+  font-size: 16px;
+  font-family: 'Oxygen', sans-serif;
+  color: #fff;
+  background-color: #323333;
+}
+#header-nav{                       /*the rectangular navbar*/
+  border-radius: 0;
+  border: 0;
+  background-color: #EDF2F2;
+  }
+#logo-img{
+   background: url('../images/original4black.jpg') no-repeat;
+   width: 150px;
+   height: 150px;
+   margin: 0;
+}
+ h1>div{
+  font-family: 'Lora',serif;
+  color: #373737;
+  font-size: 1.3em;
+  text-transform: uppercase;
+  font-weight:  bold;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 20px;
+  margin-bottom: 0;
+  line-height: .75;
+  margin-top: 20px;
+}
+div>h1{
+margin-top: 10px;
+color:#373737;
+}
+#nav-list{
+  margin-top: 58px;
+}
+#nav-list a{
+  color: #000;
+  text-align: center;
+}
+#nav-list a:hover{
+  background: #E7E7E7;
+}
+#nav-list a span{ /*icon font*/
+  font-size: 1.8em;
+}
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar{
+  border: 1px solid #373737;
+}
+.navbar-header button.navbar-toggle{
+  clear: both;
+  margin-top: -65px;
+}
+
+@media (min-width: 1200px) {
+  #relative{
+position: relative;
+left:100%;
+top: -28px;
+
+}
+.container .jumbotron {
+ background: url('../images/blackwhite1.jpeg') no-repeat;
+ height: 675px;
+    /*box-shadow: 0 0 50px #fff;
+    /*border: 2px solid #3F0C1F;*/
+ width: 1000px;
+ margin-left: 67px;
+ margin-top: 1px;
+ }
+}
+@media (min-width: 992px) and (max-width: 1199px){
+   #relative{
+position: relative;
+left:100%;
+top: -26px;
+}
+}
+@media (min-width: 768px) and (max-width: 991px){
+#nav-list a span{ /*icon font*/
+  font-size: 1em;
+  margin-right: 0px;
+} 
+div>h1{
+margin-top: 16px;
+color:#373737;
+font-size: 1.2em;
+}
+#nav-list a{
+  font-size: .9em;
+  margin-right: -15px;
+  margin-top: -16px;
+}
+#header-nav{
+  height: 125px;
+  
+  }
+#logo-img{
+   height: 125px;
+   margin: 0;
+   background: url('../images/original5.jpg') no-repeat;
+}
+#relative{
+position: relative;
+left:100%;
+top: -22px;
+}
+}
+
+@media (max-width: 767px){
+  .navbar-brand h1{
+  padding-top: -10px;
+  font-size: 4.5vw;   /*1vw=1% of viewport*/
+  left: 10px;
+}
+#header-nav{
+  height: 110px;
+}
+#logo-img{
+   margin-right: -80px;
+   background: url('../images/original6.jpg') no-repeat;
+}
+.navbar-header button.navbar-toggle{
+  clear: both;
+  margin-top: -85px;
+}
+#collapsable-nav a{
+  font-size: 1.2em;
+}
+#collapsable-nav a span{
+  font-size: 1em;
+  margin-right: 10px;
+}
+#relative{
+position: absolute;
+left: 47.5%;
+top: 98px;
+}
+}
+#seperation{
+  height:3px;
+  width:47.5vw;
+  background-color: #000;
+  margin-top: -20px;
+
+}
+#seperation2{
+  height:5px;
+  width:47.5vw;
+  background-color: #000;
+  margin-top: -20px;
+  float: right;
+  padding-top: 20px;
+}
+</style>
+ 
   </head>
 <body>
    <header>
