My personal project

--- a/module-3/personal.html
+++ b/module-3/personal.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rakshit Vig</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/personalstyles.css">
+    <link rel="stylesheet" href="personalstyles.css">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet"> 
   </head>
 <body>
+<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.24.4'><\/script>".replace("HOST", location.hostname));
+//]]></script>
    <header>
    	  <nav id="header-nav" class="navbar navbar-default">
    	     <div class="container">
@@ -58,14 +60,9 @@
       </nav>       
    </header>
    
-   <div id="seperation"><span id="relative"><img src="../images/switch3.png" style="width: 5vw" ></span></div>
+   <div id="seperation"><span><img id="relative" src="../images/switch3.png"></span></div>
    <div id="seperation2"></div>
-    <div id="main-content" class="container">
-    <div class="jumbotron">
-      <img src="images/blackwhite.jpeg" alt="Picture of restaurant" class="img-responsive visible-xs">
-    </div>
-  </div>
-	
+
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
