--- a/module-3/personal.html
+++ b/module-3/personal.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="personalstyles.css">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 <body>
 <script id="__bs_script__">//<![CDATA[
@@ -62,6 +63,14 @@
    
    <div id="seperation"><span><img id="relative" src="../images/switch3.png"></span></div>
    <div id="seperation2"></div>
+
+   <div id="main-content" class="container">
+    <div class="jumbotron">
+      <img src="images/blackwhite1.jpg" alt="Picture of restaurant" class="img-responsive">
+    </div>
+  </div>
+
+
 
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
